<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signfragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.jinjiang.computer.tianyi.ui.SignFragment">


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.computer.jinjiang.ui.OfflineActivity"
        android:orientation="vertical"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:minWidth="150dp"
                android:maxWidth="150dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textStyle="bold"
                android:hint="@string/snoorclassname"
                android:id="@+id/textclass"
                android:textColorHint="@color/colorSkyBlue"
                android:layout_weight="4"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSkyBlue"
                android:background="@drawable/edit_sharp"
                />
            <Button
                android:textStyle="bold"
                android:id="@+id/getclassorsno"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="查找"
                android:background="@drawable/blue_button_shape_01"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                style="?android:attr/buttonBarButtonStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.2"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/linear02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/blue_button_shape_01"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="20sp"
                    android:text="@string/lastone"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:id="@+id/lastone"
                    android:onClick="lastone"
                    />
<LinearLayout
    android:layout_weight="1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"></LinearLayout>
                <Button
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/blue_button_shape_01"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/nextone"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:textSize="15sp"
                    android:id="@+id/nextone"
                    android:onClick="nextone"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/linear03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.2"
            >
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sno"
                android:textSize="20sp"
                android:textColor="@color/colorSkyBlue"
                />
            <EditText
                android:textCursorDrawable="@drawable/color_cursor"
                android:textStyle="bold"
                android:id="@+id/snoinput"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:singleLine="true"
                android:inputType="number"
                android:textSize="20sp"
                android:hint="@string/touchtosearch"
                android:background="@drawable/edit_sharp"
                android:maxLength="9"
                android:textColorHint="@color/colorSkyBlue"
                android:textColor="@color/colorSkyBlue"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/linear04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.2"
            >
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/colorSkyBlue"
                />
            <EditText
                android:textStyle="bold"
                android:textColor="@color/colorSkyBlue"
                android:id="@+id/studentname"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:singleLine="true"
                android:inputType="none"
                android:textSize="20sp"
                android:focusable="false"
                android:background="@drawable/edit_sharp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/linear05"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="1">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <Button
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_button_shape_01"

                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:layout_marginRight="10sp"
                    android:text="@string/here"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/here"
                    android:textSize="20sp"
                    android:onClick="newstate"/>

                <Button
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/blue_button_shape_01"
                    android:onClick="newstate"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="10sp"
                    android:text="@string/leave"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:id="@+id/leave" />
                <Button
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_button_shape_01"
                    android:onClick="newstate"
                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:layout_marginLeft="10sp"
                    android:text="@string/absent"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/absent"
                    android:textSize="20sp"/>
                <Button
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_button_shape_01"
                    android:onClick="newstate"
                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_weight="1"
                    android:layout_marginLeft="10sp"
                    android:text="@string/late"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/late"
                    android:textSize="20sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:id="@+id/absentimes"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/absentimes"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSkyBlue"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
